{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 141,
  "lineage": "3d11748f-5f61-ae1b-7505-68877e3c3260",
  "resources": [
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "backend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:loadbalancer/app/backend-internal-alb-dev/305593cae98d3963",
            "arn_suffix": "app/backend-internal-alb-dev/305593cae98d3963",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-backend-internal-alb-dev-923712610.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:750702272407:loadbalancer/app/backend-internal-alb-dev/305593cae98d3963",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "backend-internal-alb-dev",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-043c243b03b0fba92"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0bec093e3a38b7057"
              },
              {
                "subnet_id": "subnet-0c0b73f67cf0c39b7"
              }
            ],
            "subnets": [
              "subnet-0bec093e3a38b7057",
              "subnet-0c0b73f67cf0c39b7"
            ],
            "vpc_id": "vpc-0266dc63b54497d6e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:loadbalancer/app/backend-internal-alb-dev/305593cae98d3963"
          },
          "dependencies": [
            "module.nat_instance.aws_subnet.pri_sub_3a",
            "module.nat_instance.aws_subnet.pri_sub_4b",
            "module.nat_instance.data.aws_availability_zones.available_zones",
            "module.sg.aws_security_group.backend_alb_sg",
            "module.sg.aws_security_group.ecs_node_frontend_sg",
            "module.sg.aws_security_group.frontend_alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "frontend_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:loadbalancer/app/frontend-public-alb-dev/c75266d248c1d4fd",
            "arn_suffix": "app/frontend-public-alb-dev/c75266d248c1d4fd",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "frontend-public-alb-dev-2121447532.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:750702272407:loadbalancer/app/frontend-public-alb-dev/c75266d248c1d4fd",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "frontend-public-alb-dev",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-069b6727c0d7917a4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-004ad17903e3d35af"
              },
              {
                "subnet_id": "subnet-0e262ada6d66b0c1f"
              }
            ],
            "subnets": [
              "subnet-004ad17903e3d35af",
              "subnet-0e262ada6d66b0c1f"
            ],
            "vpc_id": "vpc-0266dc63b54497d6e",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:loadbalancer/app/frontend-public-alb-dev/c75266d248c1d4fd"
          },
          "dependencies": [
            "module.sg.aws_security_group.frontend_alb_sg",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "app_listener_https_secure",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:listener/app/frontend-public-alb-dev/c75266d248c1d4fd/94d938eb58ac48d9",
            "certificate_arn": "arn:aws:acm:us-east-1:750702272407:certificate/e894d12e-ca40-4826-b4c4-881c7f159f05",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:targetgroup/frontend-public-tg/ba3098d063b36c8d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:750702272407:listener/app/frontend-public-alb-dev/c75266d248c1d4fd/94d938eb58ac48d9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:loadbalancer/app/frontend-public-alb-dev/c75266d248c1d4fd",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:listener/app/frontend-public-alb-dev/c75266d248c1d4fd/94d938eb58ac48d9"
          },
          "dependencies": [
            "module.acm.aws_acm_certificate.app_cert",
            "module.acm.aws_acm_certificate_validation.app_cert_wait",
            "module.acm.aws_route53_record.cert_validation",
            "module.acm.data.aws_route53_zone.main",
            "module.lb.aws_lb.frontend_alb",
            "module.lb.aws_lb_target_group.frontend_tg",
            "module.sg.aws_security_group.frontend_alb_sg",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "backend_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:listener/app/backend-internal-alb-dev/305593cae98d3963/d5e72819f014c74f",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:targetgroup/backend-internal-tg/e45a140dbef66592",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:750702272407:listener/app/backend-internal-alb-dev/305593cae98d3963/d5e72819f014c74f",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:loadbalancer/app/backend-internal-alb-dev/305593cae98d3963",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:listener/app/backend-internal-alb-dev/305593cae98d3963/d5e72819f014c74f"
          },
          "dependencies": [
            "module.lb.aws_lb.backend_alb",
            "module.lb.aws_lb_target_group.backend_tg",
            "module.nat_instance.aws_subnet.pri_sub_3a",
            "module.nat_instance.aws_subnet.pri_sub_4b",
            "module.nat_instance.data.aws_availability_zones.available_zones",
            "module.sg.aws_security_group.backend_alb_sg",
            "module.sg.aws_security_group.ecs_node_frontend_sg",
            "module.sg.aws_security_group.frontend_alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http_redirect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:listener/app/frontend-public-alb-dev/c75266d248c1d4fd/bdf19400854b0dcd",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:750702272407:listener/app/frontend-public-alb-dev/c75266d248c1d4fd/bdf19400854b0dcd",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:loadbalancer/app/frontend-public-alb-dev/c75266d248c1d4fd",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:listener/app/frontend-public-alb-dev/c75266d248c1d4fd/bdf19400854b0dcd"
          },
          "dependencies": [
            "module.lb.aws_lb.frontend_alb",
            "module.sg.aws_security_group.frontend_alb_sg",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:targetgroup/backend-internal-tg/e45a140dbef66592",
            "arn_suffix": "targetgroup/backend-internal-tg/e45a140dbef66592",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:750702272407:targetgroup/backend-internal-tg/e45a140dbef66592",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:750702272407:loadbalancer/app/backend-internal-alb-dev/305593cae98d3963"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "backend-internal-tg",
            "port": 3200,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:targetgroup/backend-internal-tg/e45a140dbef66592"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.lb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:targetgroup/frontend-public-tg/ba3098d063b36c8d",
            "arn_suffix": "targetgroup/frontend-public-tg/ba3098d063b36c8d",
            "deregistration_delay": "30",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 15,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:750702272407:targetgroup/frontend-public-tg/ba3098d063b36c8d",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:750702272407:loadbalancer/app/frontend-public-alb-dev/c75266d248c1d4fd"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "frontend-public-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:750702272407:targetgroup/frontend-public-tg/ba3098d063b36c8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_ec2_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-037d882b31eae26a2",
            "arn": "arn:aws:ec2:us-east-1:750702272407:instance/i-0b1c7bf932e817cbc",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 2,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ecsNodeProfile-dev",
            "id": "i-0b1c7bf932e817cbc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t4g.small",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-09dcb15a071d6a597"
              }
            ],
            "primary_network_interface_id": "eni-09dcb15a071d6a597",
            "private_dns": "ip-10-0-1-162.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.162",
            "public_dns": "ec2-3-236-133-27.compute-1.amazonaws.com",
            "public_ip": "3.236.133.27",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-0bcc64540b5a33264",
                "volume_size": 8,
                "volume_type": "standard"
              }
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0e262ada6d66b0c1f",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "self-managed-nat-ec2-instance",
              "Project": "lirw-ecs",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "self-managed-nat-ec2-instance",
              "Project": "lirw-ecs",
              "Terraform": "true"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0adeacfb4d31cce0a"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "i-0b1c7bf932e817cbc",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ecs_node_profile",
            "module.iam.aws_iam_role.ecs_node_role",
            "module.iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.nat_instance.aws_security_group.nat_ec2_sg",
            "module.nat_instance.data.aws_ami.latest_amazon_linux",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat_instance",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:route-table/rtb-07d8fd5737ba70234",
            "id": "rtb-07d8fd5737ba70234",
            "owner_id": "750702272407",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-09dcb15a071d6a597",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Pri-rt-a",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Pri-rt-a",
              "Project": "lirw-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "rtb-07d8fd5737ba70234",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ecs_node_profile",
            "module.iam.aws_iam_role.ecs_node_role",
            "module.iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.nat_instance.aws_instance.nat_ec2_instance",
            "module.nat_instance.aws_security_group.nat_ec2_sg",
            "module.nat_instance.data.aws_ami.latest_amazon_linux",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat_instance",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-3a-with-Pri-rt-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06a140820e26c4eb4",
            "region": "us-east-1",
            "route_table_id": "rtb-07d8fd5737ba70234",
            "subnet_id": "subnet-0bec093e3a38b7057"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ecs_node_profile",
            "module.iam.aws_iam_role.ecs_node_role",
            "module.iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.nat_instance.aws_instance.nat_ec2_instance",
            "module.nat_instance.aws_route_table.pri-rt-a",
            "module.nat_instance.aws_security_group.nat_ec2_sg",
            "module.nat_instance.aws_subnet.pri_sub_3a",
            "module.nat_instance.data.aws_ami.latest_amazon_linux",
            "module.nat_instance.data.aws_availability_zones.available_zones",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat_instance",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pri-sub-4b-with-Pri-rt-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-000fd777a927b10e5",
            "region": "us-east-1",
            "route_table_id": "rtb-07d8fd5737ba70234",
            "subnet_id": "subnet-0c0b73f67cf0c39b7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.iam.aws_iam_instance_profile.ecs_node_profile",
            "module.iam.aws_iam_role.ecs_node_role",
            "module.iam.data.aws_iam_policy_document.ec2_assume_role",
            "module.nat_instance.aws_instance.nat_ec2_instance",
            "module.nat_instance.aws_route_table.pri-rt-a",
            "module.nat_instance.aws_security_group.nat_ec2_sg",
            "module.nat_instance.aws_subnet.pri_sub_4b",
            "module.nat_instance.data.aws_ami.latest_amazon_linux",
            "module.nat_instance.data.aws_availability_zones.available_zones",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.nat_instance",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:security-group/sg-0adeacfb4d31cce0a",
            "description": "Security group of Self-Managed NAT EC2 Instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0adeacfb4d31cce0a",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow all TCP traffic from VPC CIDR",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "self-managed-nat-ec2-sg",
            "name_prefix": "",
            "owner_id": "750702272407",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "self-managed-nat-ec2-instance-sg",
              "Project": "lirw-ecs",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "self-managed-nat-ec2-instance-sg",
              "Project": "lirw-ecs",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "sg-0adeacfb4d31cce0a",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_3a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:subnet/subnet-0bec093e3a38b7057",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bec093e3a38b7057",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750702272407",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pri-sub-3a",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pri-sub-3a",
              "Project": "lirw-ecs"
            },
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "subnet-0bec093e3a38b7057",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nat_instance.data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.nat_instance",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_4b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:subnet/subnet-0c0b73f67cf0c39b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c0b73f67cf0c39b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750702272407",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pri-sub-4b",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pri-sub-4b",
              "Project": "lirw-ecs"
            },
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "subnet-0c0b73f67cf0c39b7",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.nat_instance.data.aws_availability_zones.available_zones",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:security-group/sg-043c243b03b0fba92",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-043c243b03b0fba92",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d862d527bfc05ed"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "internal alb security group",
            "name_prefix": "",
            "owner_id": "750702272407",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "backend_alb_sg",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "backend_alb_sg",
              "Project": "lirw-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "sg-043c243b03b0fba92",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.ecs_node_frontend_sg",
            "module.sg.aws_security_group.frontend_alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_node_backend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:security-group/sg-06924eef296df9fc4",
            "description": "SG for ECS EC2 nodes backend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06924eef296df9fc4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "node port access",
                "from_port": 3200,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-043c243b03b0fba92"
                ],
                "self": false,
                "to_port": 3200
              }
            ],
            "name": "ecs-node-backend-sg-dev",
            "name_prefix": "",
            "owner_id": "750702272407",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "sg-06924eef296df9fc4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.backend_alb_sg",
            "module.sg.aws_security_group.ecs_node_frontend_sg",
            "module.sg.aws_security_group.frontend_alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_node_frontend_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:security-group/sg-07d862d527bfc05ed",
            "description": "SG for ECS EC2 nodes frontend",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07d862d527bfc05ed",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "node port access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-069b6727c0d7917a4"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ecs-node-frontend-sg-dev",
            "name_prefix": "",
            "owner_id": "750702272407",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "sg-07d862d527bfc05ed",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.frontend_alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_node_rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:security-group/sg-040b8ea90199c5627",
            "description": "SG for ECS EC2 nodes rds",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-040b8ea90199c5627",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "db port access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-06924eef296df9fc4"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "db port access",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07d862d527bfc05ed"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "ecs-node-rds-sg-dev",
            "name_prefix": "",
            "owner_id": "750702272407",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "sg-040b8ea90199c5627",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.sg.aws_security_group.backend_alb_sg",
            "module.sg.aws_security_group.ecs_node_backend_sg",
            "module.sg.aws_security_group.ecs_node_frontend_sg",
            "module.sg.aws_security_group.frontend_alb_sg",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend_alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:security-group/sg-069b6727c0d7917a4",
            "description": "enable http/https access on port 80/443",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-069b6727c0d7917a4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http access",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https access",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "alb security group",
            "name_prefix": "",
            "owner_id": "750702272407",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frontend_alb_sg",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "frontend_alb_sg",
              "Project": "lirw-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "sg-069b6727c0d7917a4",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:internet-gateway/igw-0d04ae40ee75f5137",
            "id": "igw-0d04ae40ee75f5137",
            "owner_id": "750702272407",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lirw-ecs-igw",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lirw-ecs-igw",
              "Project": "lirw-ecs"
            },
            "timeouts": {
              "delete": "5m"
            },
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:route-table/rtb-062fcb116270f5ccd",
            "id": "rtb-062fcb116270f5ccd",
            "owner_id": "750702272407",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d04ae40ee75f5137",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Public-rt",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "Public-rt",
              "Project": "lirw-ecs"
            },
            "timeouts": null,
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "rtb-062fcb116270f5ccd",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-1a_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05193fd232d0185d6",
            "region": "us-east-1",
            "route_table_id": "rtb-062fcb116270f5ccd",
            "subnet_id": "subnet-0e262ada6d66b0c1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.pub_sub_1a",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub-sub-2-b_route_table_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049e9b3e8142bbfa8",
            "region": "us-east-1",
            "route_table_id": "rtb-062fcb116270f5ccd",
            "subnet_id": "subnet-004ad17903e3d35af"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.internet_gateway",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.pub_sub_2b",
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_5a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:subnet/subnet-0494fa8907ec2886d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0494fa8907ec2886d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750702272407",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pri-sub-5a",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pri-sub-5a",
              "Project": "lirw-ecs"
            },
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "subnet-0494fa8907ec2886d",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pri_sub_6b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:subnet/subnet-059f298be8e98a021",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.6.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-059f298be8e98a021",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "750702272407",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pri-sub-6b",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pri-sub-6b",
              "Project": "lirw-ecs"
            },
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "subnet-059f298be8e98a021",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_1a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:subnet/subnet-0e262ada6d66b0c1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e262ada6d66b0c1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750702272407",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pub_sub_1a",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pub_sub_1a",
              "Project": "lirw-ecs"
            },
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "subnet-0e262ada6d66b0c1f",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_sub_2b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:subnet/subnet-004ad17903e3d35af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-004ad17903e3d35af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "750702272407",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pub_sub_2b",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "pub_sub_2b",
              "Project": "lirw-ecs"
            },
            "vpc_id": "vpc-0266dc63b54497d6e"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "subnet-004ad17903e3d35af",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc",
            "module.vpc.data.aws_availability_zones.available_zones"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:750702272407:vpc/vpc-0266dc63b54497d6e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-061a0bd47ccc4cc60",
            "default_route_table_id": "rtb-0c03df2e03551dcc8",
            "default_security_group_id": "sg-0714f925d57bbc6cb",
            "dhcp_options_id": "dopt-085ab6a9e9e74ee87",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0266dc63b54497d6e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c03df2e03551dcc8",
            "owner_id": "750702272407",
            "region": "us-east-1",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lirw-ecs-vpc",
              "Project": "lirw-ecs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "Terraform",
              "Name": "lirw-ecs-vpc",
              "Project": "lirw-ecs"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "750702272407",
            "id": "vpc-0266dc63b54497d6e",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}